// protoc --go_out=./pb --go-grpc_out=./pb order.proto
syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "./pb";

message Order {
  string id = 1;
  string account_id = 2;
  repeated OrderProduct products = 3;
  double total_price = 4;
  google.protobuf.Timestamp created_at = 5;
}

message OrderProduct {
  string order_id = 1;
  string product_id = 2;
  string product_name = 3;
  string product_description = 4;
  double price = 5;
  int32 quantity = 6;
}

message CreateOrUpdateOrderRequest {
  Order order = 1;
}

message CreateOrUpdateOrderResponse {
  Order order = 1;
}

message GetOrderByIDRequest {
  string id = 1;
}

message GetOrderByIDResponse {
  Order order = 1;
}

message GetOrdersForAccountRequest {
  string account_id = 1;
}

message GetOrdersForAccountResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc CreateOrUpdateOrder(CreateOrUpdateOrderRequest) returns (CreateOrUpdateOrderResponse);
  rpc GetOrderByID(GetOrderByIDRequest) returns (GetOrderByIDResponse);
  rpc GetOrdersForAccount(GetOrdersForAccountRequest) returns (GetOrdersForAccountResponse);
}

